[project]
name = "spatial-seq"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ethan H", email = "ethanhung11@gmail.com" }
]
dependencies = [
    "scanpy[louvain, leiden]>=1.11.2",
    "harmonypy>=0.0.10",
    "seaborn>=0.13.2",
    "pacmap==0.8.0",
    "glasbey>=0.3.0",
    "openpyxl>=3.1.5",
    "rpy2>=3.6.1",
    "anndata2ri>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_seq"]
