[project]
name = "spatial-seq"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ethan H", email = "ethanhung11@gmail.com" }
]
dependencies = [
    "spatialdata[extra]>=0.4.0",
    "scanpy[louvain, leiden]>=1.11.2",
    "seaborn>=0.13.2",
    "pacmap==0.8.0",
    "glasbey>=0.3.0",
    "openpyxl>=3.1.5",
    "rpy2>=3.6.1",
    "anndata2ri>=1.3.2",
    "scvi>=0.6.8",
    "doubletdetection>=4.3.0.post1",
    "harmonypy>=0.0.10",
    "geosketch>=1.3",
    "tqdm>=4.67.1",
    "napari-spatialdata>=0.5.6",
    "anndata>=0.12.2",
    "squidpy>=1.6.5",
    "decoupler>=2.1.1",
    "gseapy>=1.1.9",
    "liana>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black[jupyter]>=25.1.0",
    "itables>=2.4.4",
    "notebook>=7.4.4",
    "jupyter[black]>=1.1.1",
    "jupyter-black>=0.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spatial_seq"]
